Fungus3D仕様にできた

--- a/Assets/MyProject.asmdef
+++ b/Assets/MyProject.asmdef
@@ -10,7 +10,8 @@
         "GUID:5c01796d064528144a599661eaab93a6",
         "GUID:dc47925d1a5fa2946bdd37746b2b5d48",
         "GUID:e048eeec9bdb9d30448017b829deb3f6",
-        "GUID:4db1229c02f3f629bdd928353859c2b3"
+        "GUID:4db1229c02f3f629bdd928353859c2b3",
+        "GUID:007db7f7a4c8f944990d71603a110f82"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
